[package]
name = "foggy_engine"
version = "0.1.0"
authors = ["hyves42 <hyves42@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.0", default-features = false, features = ["from", "into"]}
maplit = "1.0.2"
float-cmp = "0.8.0"